--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -97,6 +97,9 @@
     </item>
     <item row="5" column="3" colspan="3">
      <widget class="QComboBox" name="comboBoxPSM">
+      <property name="currentIndex">
+       <number>3</number>
+      </property>
       <item>
        <property name="text">
         <string>Orientation and script detection (OSD) only</string>
@@ -196,7 +199,7 @@
      <x>0</x>
      <y>0</y>
      <width>522</width>
-     <height>18</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
