Czech translation; TESSDATA_PREFIX accepted; statusbar replaced by QPlainTextEdit

--- a/resources/qt4tesseract.qrc
+++ b/resources/qt4tesseract.qrc
@@ -3,6 +3,7 @@
         <file>images/qt4tesseract.svg</file>
     </qresource>
     <qresource prefix="/Languages">
+        <file>translations/qt4tesseract_cs.qm</file>
         <file>translations/qt4tesseract_en.qm</file>
         <file>translations/qt4tesseract_et.qm</file>
         <file>translations/qt4tesseract_sk.qm</file>
